Implementation of singleton LanguageManager